# rust_serverless_test

./: .gitignore  Cargo.toml  package.json  serverless.yml
migrations/: 20201205012616_init.sql  20201205175335_create-addons-table.sql
src/: main.rs
