[package]
name = "rust-test"
version = "0.1.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"


[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"

serde = { version = "1.0", features = ["derive"] }
log = "0.4"
simple_logger = "1.11"

# newer versions use unstable feature
sqlformat = "=0.1.0"

sqlx = { git = "https://github.com/tarkah/sqlx", features = ["runtime-tokio-native-tls", "aurora"], rev="f3e453a12b2b3fd00178c5236ab73ebbb3e139d2" }